# cool_squad

./: .env.example  .gitignore  Makefile  changelog.md  cli.py  demo.py  project_reorganization_plan.md  pyproject.toml  readme.md  requirements.txt
.cursor/rules/: git.mdc  python-project-rules.mdc  readmes.mdc  slop-cleanup.mdc
cool_squad/: README.md  api.py  board.py  board_client.py  bot_tools.py  bots.py  config.py  custom_logging.py  knowledge.py  logging.py  main.py  server.py  storage.py  token_budget.py
cool_squad/api/: models.py  routes.py  sse.py
cool_squad/bots/: base.py  personalities.py  tools.py
cool_squad/clients/: __init__.py  cli.py
cool_squad/core/: autonomous.py  complexity.py  config.py  knowledge.py  models.py  monologue.py
cool_squad/llm/: providers.py
cool_squad/scripts/: compare_connections.py  run_sse_test.py  test_sse_client.py  test_websocket_client.py
cool_squad/server/: board.py  chat.py
cool_squad/storage/: storage.py
cool_squad/tests/: test_sse.py
cool_squad/utils/: logging.py  token_budget.py
examples/: autonomous_thinking_demo.py  bot_tools_demo.py  internal_monologue_demo.py  llm_providers.py  ole_scrappy_demo.py  ole_scrappy_tools_demo.py
tests/: __init__.py  test_anthropic.py  test_api.py  test_board.py  test_board_client.py  test_bot_monologue.py  test_bot_tools.py  test_bots.py  test_complexity.py  test_core.py  test_knowledge.py  test_monologue.py  test_openai.py  test_server.py  test_storage.py  test_token_budget.py
web/: .gitignore  README.md  package-lock.json  package.json
web/src/: app.css
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChannelBots.tsx  navigation.tsx  username-input.tsx
web/src/lib/: api.ts  sse.ts  user-context.tsx  websocket.ts
(+12 files in other folders)
